--- a/standard.html
+++ b/standard.html
@@ -20,18 +20,19 @@
             ];
 
             var jssor_1_SlideoTransitions = [
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}],
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}],
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}],
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}],
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}],
-              [{b:80,d:620,o:1},{b:2600,d:420,o:0}]
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}],
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}],
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}],
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}],
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}],
+              [{b:80,d:620,o:1},{b:5020,d:420,o:0}]
             ];
 
             var jssor_1_options = {
               $AutoPlay: 1,
-              $SlideEasing: $Jease$.$InOutSine,
+              $SlideEasing: $Jease$.$Linear,
               $DragOrientation: 3,
+              $PauseOnHover: 0,
               $SlideshowOptions: {
                 $Class: $JssorSlideshowRunner$,
                 $Transitions: jssor_1_SlideshowTransitions,
@@ -135,41 +136,41 @@
             <!-- Loading Screen -->
             <div data-u="loading" style="position:absolute;top:0px;left:0px;width:100%;height:100%;text-align:center;background-position:50% 50%;background-repeat:no-repeat;background-image:url('img/double-tail-spin-x.svg');background-color:rgba(0, 0, 0, 0.7);background-size:40px 40px;"></div>
             <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1366px;height:768px;overflow:hidden;">
-                <div>
+                <div data-idle="2000">
                     <img data-u="image" src="img/tresa1.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title"  style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="0" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="0" style="left:-38px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
                 </div>
                 <div>
                     <img data-u="image" src="img/claro2.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="1" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="1" style="left:-48px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Claromecó</h3></div>
                 </div>
                 <div>
                     <img data-u="image" src="img/3lp.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="2" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="2" style="left:-52px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en La Plata</h3></div>
                 </div>
                 <div>
                     <img data-u="image" src="img/4neco.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="3" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="3" style="left:-52px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Necochea</h3></div>
                 </div>
                 <div>
                     <img data-u="image" src="img/mdq5.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="4" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="4" style="left:-38px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Mar del Plata</h3></div>
                 </div>
                 <div>
                     <img data-u="image" src="img/6bsas.jpg" />
                     <img style="left:-2px;top:-1px;width:1369px;height:770px;position:absolute;max-width:1369px;" src="img/degradesi.png" />
-                    <div class="title" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
-                    <div class="subtitle" data-t="5" style="left:-22px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Tres Arroyos</h3></div>
+                    <div class="tittle" style="left:50px;top:225px;width:1044px;height:351px;position:absolute;color:#ffffff;font-size:36px;line-height:0.15;text-align:left;"><h1>ENCONTRA LA PROPIEDAD</h1><h2>IDEAL PARA VOS</h2></div>
+                    <div class="subtitle" data-t="5" style="left:-38px;top:334px;width:434px;height:40px;position:absolute;opacity:0;color:#ffffff;font-size:32px;line-height:1.2;text-align:center;"><h3>en Buenos Aires</h3></div>
                 </div>
             </div><a data-scale="0" href="https://www.jssor.com" style="display:none;position:absolute;">image gallery</a>
         </div>
